<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Date" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/textViewOutDep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignRight="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:stretchColumns="0,1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/textViewInDepAir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="25dip"
                android:text="@string/choose_date_choice"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/textViewOutArr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depart"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/date_btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/outDepDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_date"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/date_btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tableLayout1" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/outDepClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dep_times"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/chkd_7am"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven_am" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/chkd_7pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven_pm" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textViewOutArr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ret_times"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/chkr_7am"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven_am" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/chkr_7pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven_pm" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_next_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/back_date"
        android:layout_alignBottom="@+id/back_date"
        android:layout_alignRight="@+id/tableLayout2"
        android:text="@string/next" />

    <Button
        android:id="@+id/back_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout2"
        android:layout_below="@+id/tableLayout2"
        android:text="@string/back" />

</RelativeLayout>