<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="left|right"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainFlight" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="110dip" >

        <TextView
            android:id="@+id/textViewOutDep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dip"
        android:paddingTop="15dip" >

        <TextView
            android:id="@+id/textViewInDepAir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/spinner_airport_1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/departure"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_airport_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textViewInDepAir" />

        <TextView
            android:id="@+id/outDepDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/spinner_airport_2"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewInDepAir"
            android:layout_toLeftOf="@+id/spinner_airport_2"
            android:gravity="center"
            android:text="@string/arrival"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_airport_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_airport_1"
            android:layout_toRightOf="@+id/textViewInDepAir" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="25dip"
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/rdbGp1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" >

            <RadioButton
                android:id="@+id/rdb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/single" />

            <RadioButton
                android:id="@+id/rdb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ret" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dip"
            android:paddingRight="12dip"
            android:text="@string/adult"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextAdult"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textViewOutArr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dip"
            android:paddingRight="12dip"
            android:text="@string/children"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextChildren"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >
        </EditText>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dip" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_weight="0.00" >

        <Button
            android:id="@+id/btnToDate"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/enter" />
    </RelativeLayout>

</LinearLayout>