<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PassangerEntry" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_plane" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/payment_details"
            android:textColor="#ff0000"
            android:textSize="24sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/frameLayout1"
        android:layout_below="@+id/frameLayout1"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewOutDep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visa_card"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dip" >

            <Button
                android:id="@+id/frag1hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show" />

            <fragment
                android:id="@+id/fragment1"
                android:name="com.jonathan.flight.PassangerEntry$FirstFragment"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewInDepAir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/master_card"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dip" >

            <Button
                android:id="@+id/frag2hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show" />

            <fragment
                android:id="@+id/fragment2"
                android:name="com.jonathan.flight.PassangerEntry$SecondFragment"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/credit_name_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentRight="true"
        android:hint="@string/first_last_name"
        android:layout_below="@+id/linearLayout1"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_credit_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/btn_credit_next1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_credit_back"
        android:layout_alignRight="@+id/credit_name_entry"
        android:text="@string/next" />

</RelativeLayout>